<resources>
    <string name="app_name">SMS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_academics">Academics</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_library">Library</string>
    <string name="title_inbox">Inbox</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="invalid_user_type">Select a role</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_forget_password">forget password</string>
</resources>