<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">
    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.cheise_proj.core.feature.student.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/navigation_library"
        android:name="com.cheise_proj.core.feature.student.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cheise_proj.core.feature.student.ui.dashboard.StudentDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/student_fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_academics"
        android:name="com.cheise_proj.core.feature.student.ui.academics.AcademicsFragment"
        android:label="fragment_academics"
        tools:layout="@layout/fragment_academics" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.cheise_proj.core.feature.student.ui.account.AccountMainFragment"
        android:label="Accounts"
        tools:layout="@layout/fragment_account_main" />
</navigation>